mens/DestinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mens
spec:
  host: mens
  subsets:
  - labels:
      version: v10
    name: v10
