mens/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mens
spec:
  hosts:
  - mens
  http:
  - route:
    - destination:
        host: mens
        subset: v10
